# haru

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
assets/: cmakelists
assets/cmake/: compile_flags  dependencies  tidy
cmake/: baking.cmake  compile_flags.cmake  dependencies.cmake  tidy.cmake
src/: args_parser.cpp  args_parser.h  bake_in.h  cmake_lists_generator.cpp  cmake_lists_generator.h  command.cpp  command.h  common.h  defaults.h  error.cpp  error.h  file_operations.cpp  file_operations.h  log.cpp  log.h  log_formatter.cpp  log_formatter.h  main.cpp  post_ops.cpp  post_ops.h  project_info.cpp  project_info.h  utils.cpp  utils.h
